Updated localization files. Adds Thai (Thailand) and Lithuanian support.

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -90,9 +90,12 @@ Fishing.SkillName=RYBARENI
 Fishing.Skillup=[[YELLOW]]Dovednost v rybareni byla navysena o {0}. Celkem ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]\u0160ance na dvojn\u00e1sobn\u00fd zisk: [[YELLOW]]{0}
 Herbalism.Ability.GTe.Length=[[RED]]D\u00e9lka trv\u00e1n\u00ed Zelen\u00e9 planety: [[YELLOW]]{0}s
+Herbalism.Ability.GTe.NeedMore=[[RED]]Bude\u0161 pot\u0159ebovat v\u00edc sem\u00ednek pro Green Tera.
 Herbalism.Ability.GTh.Chance=[[RED]]\u0160ance na dovednost Zahradn\u00edk: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**ZAHRADN\u00cdK SELHAL**
+Herbalism.Ability.GTh.Stage=[[RED]] Zahradn\u00edk Stage: [[\u017dlut\u00e9]] Plodiny rostou ve st\u00e1diu {0}
 Herbalism.Ability.GTh=[[GREEN]]**ZAHRADNIK**
+Herbalism.Ability.HylianLuck=[[RED]]Hylian Luck zm\u011bn\u011bn: [[YELLOW]]{0}
 Herbalism.Ability.Lower=[[GRAY]]**SKLONIL JSI SVOJI MOTYKU**
 Herbalism.Ability.Ready=[[GREEN]]**PRIPRAVIL JSI SVOU MOTYKU**
 Herbalism.Effect.0=Green Terra (SCHOPNOST)
@@ -105,6 +108,8 @@ Herbalism.Effect.6=Farm\u00e1\u0159\u016fv apetit
 Herbalism.Effect.7=Zvysuje obnovu hladu ze sklizenych jidel
 Herbalism.Effect.8=Dvojnasobny zisk (vsechny byliny)
 Herbalism.Effect.9=Zdvojnasobi normalni zisk
+Herbalism.Effect.11=D\u00e1v\u00e1 malou \u0161anci naj\u00edt vz\u00e1cn\u00e9 p\u0159edm\u011bty
+Herbalism.HylianLuck=[[GREEN]]The luck of Hyrule t\u011b doprov\u00e1z\u00ed!
 Herbalism.Listener=Bylinarstvi:
 Herbalism.SkillName=Bylinkarstvi
 Herbalism.Skills.GTe.Off=[[RED]]**Green Terra byla deaktivovana**
@@ -159,6 +164,7 @@ Repair.Effect.6=Oprava diamantovych predmetu ({0}+ SKILL)
 Repair.Effect.7=Oprava diamantovych nastroju a brneni
 Repair.Effect.8=Tajemne kovani
 Repair.Effect.9=Oprava enchantovanych predmetu
+Repair.Error=[[DARK_RED]]V mcMMO do\u0161lo k chyb\u011b p\u0159i oprav\u011b tohoto itemu!
 Repair.Listener.Anvil=[[DARK_RED]]Polo\u017eil si kovadlinu, na kovadlin\u011b m\u016f\u017ee\u0161 opravovat n\u00e1stroje a zbroj.
 Repair.Listener.Anvil2=[[DARK_RED]]Polozil jsi Salvage kovadlinu, pouzij ji na zachranu armoru.
 Repair.Listener=Opravovani:
@@ -170,6 +176,7 @@ Repair.Skills.AdeptStone=[[DARK_RED]]Nemas dostatek dovednosti pro opravu Kamenn
 Repair.Skills.Adept=[[RED]]Mus\u00ed\u0161 m\u00edt level [[YELLOW]]{0}[[RED]] k oprav\u011b [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]To bylo snadn\u00e9.
 Repair.Skills.FullDurability=[[GRAY]]Tento p\u0159edm\u011bt nen\u00ed po\u0161kozen\u00fd.
+Repair.Skills.SalvageSuccess=[[GRAY]] Item zachr\u00e1n\u011bn!
 Repair.Skills.Mastery=[[RED]]Mistrovstvi v opravovani: [[YELLOW]]Extra {0} \u017eivotnosti obnovena
 Repair.Skills.StackedItems=[[DARK_RED]]Nem\u016f\u017ee\u0161 opravovat nestackovan\u00e9 p\u0159edm\u011bty.
 Repair.Skills.Super.Chance=[[RED]]\u0160ance na superopravov\u00e1n\u00ed: [[YELLOW]]{0}
@@ -245,6 +252,7 @@ Unarmed.Ability.Bonus.0=Styl \u017eelezn\u00e9 pa\u017ee
 Unarmed.Ability.Bonus.1=+{0} Zv\u00fd\u0161en\u00ed zran\u011bn\u00ed
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]\u0160ance na vych\u00edlen\u00ed \u0161\u00edpu: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]\u0160ance na odzbrojen\u00ed: [[YELLOW]]{0}
+Unarmed.Ability.IronGrip.Attacker=[[RED]] Tv\u016fj soupe\u0159 m\u00e1 \u017eelezn\u00e9 sev\u0159en\u00ed!
 Unarmed.Ability.Lower=[[GRAY]]**SKL\u00c1N\u00cd\u0160 SV\u00c9 P\u011aSTI**
 Unarmed.Ability.Ready=[[GREEN]]**PRIPRAVIL JSI SVOJE PESTI**
 Unarmed.Effect.0=B\u011bsn\u011bn\u00ed (SCHOPNOST)
@@ -294,11 +302,15 @@ Combat.Gore=[[GREEN]]**PRUNIK**
 Combat.StruckByGore=[[RED]]**BYL JSI PROBODNUT**
 Combat.TargetDazed=C\u00edl byl [[DARK_RED]]Omr\u00e1\u010den
 Combat.TouchedFuzzy=[[DARK_RED]]Nejasne dotcen. Mas zavrat.
+Commands.addlevels.AwardAll.2=[[RED]]V\u0161echny schopnosti byly zm\u011bn\u011bny na {0}.
+Commands.addlevels.AwardSkill.1=[[GREEN]]Tvoje dovednost {1} je nyn\u00ed {0}!
+Commands.addxp.AwardSkill=[[GREEN]]Z\u00edskal si {0} zku\u0161enost\u00ed v {1}!
 Commands.Ability.Off=Pou\u017eit\u00ed schopnosti bylo [[RED]] vypnuto
 Commands.Ability.On=Pou\u017eit\u00ed schopnosti bylo [[GREEN]]zapnuto
 Commands.AdminChat.Off=Admin chat [[RED]]Vypnuty
 Commands.AdminChat.On=Admin Chat[[GREEN]]Zapnut\u00fd
 Commands.AdminToggle=[[RED]]- Prepnout admin chat
+Commands.Chat.Console=*\u0158\u00edd\u00edc\u00ed panel*
 Commands.Disabled=[[RED]]Tento prikaz je vypnuty.
 Commands.DoesNotExist=[[RED]]Hrac se v databaze nenachazi!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmod vypnuty
@@ -310,9 +322,12 @@ Commands.Invite.Success=[[GREEN]]Pozv\u00e1nka \u00faspesne odesl\u00e1na.
 Commands.Leaderboards=<skill> <page> [[RED]]- Tabulka nejlep\u0161\u00edch
 Commands.mcgod=[[RED]]- Prepnout GodMod
 Commands.mchud.Invalid=Nespr\u00e1vn\u00fd typ HUD.
+Commands.mcpurge.Success=[[GREEN]]Datab\u00e1ze byla \u00fasp\u011b\u0161n\u011b vy\u010dist\u011bna!
 Commands.mcrank.Heading=[[GOLD]]-=OSOBN\u00cd HODNOCEN\u00cd=-
+Commands.mcremove.Success=[[GREEN]]{0} byl \u00fasp\u011b\u0161n\u011b vymaz\u00e1n z datab\u00e1ze!
 Commands.mctop.Tip=[[GOLD]]Tip: Pro osobn\u00ed statistiky pou\u017eij [[RED]]/mcrank[[GOLD]]!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
+Commands.mmoedit.Modified.1=[[GREEN]]Tv\u016fj skill v  {0} byl pozm\u011bn\u011bn na {1}!
 Commands.ModDescription=[[RED]]- Precti si strucny popis pluginu
 Commands.NoConsole=Tento prikaz nepodporuje pouziti z konzole.
 Commands.Other=[[GREEN]]--OSTATNI PRIKAZY--
@@ -332,7 +347,8 @@ Commands.Party.Toggle=[[RED]]- Zapnout party chat
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Rebricek [[YELLOW]]Celkovych levelu--
 Commands.PowerLevel=[[DARK_RED]]CELKOVY LEVEL: [[GREEN]]{0}
 Commands.Reset.All=[[GREEN]] Vsechny vase dovednosti byli byli uspesne resetov\u00e1ny.
-Commands.Reset.Single=[[GREEN]] Vsechny vase dovednosti byly uspesne resetov\u00e1ny.
+Commands.Reset.Single=[[GREEN]]Tvoje dovednost {0} byla uspesne restartovana.
+Commands.Reset=[[RED]]Resetov\u00e1n\u00ed zku\u0161enost\u00ed na level 0
 Commands.Skill.Invalid=[[RED]]Neplatny nazev dovednosti!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Tabulka nejlepsich--
 Commands.SkillInfo=/<skill> [[RED]]- Zjist\u00ed\u0161 bliz\u0161\u00ed informace o skillu
@@ -352,6 +368,10 @@ Party.IsLocked=[[RED]]Tahla parta je ji\u017e uzamknuta!
 Party.IsntLocked=[[RED]]Tato parta je zamknuta!
 Party.Locked=[[RED]]Parta je zamnuta, pouze velitel party t\u011b m\u016f\u017ee p\u0159izvat.
 Party.NotInYourParty=[[DARK_RED]]{0} nen\u00ed ve tv\u00e9 part\u011b.
+Party.Owner.New=[[GREEN]]{0} se stal v\u016fdce party.
+Party.Owner.NotLeader=[[DARK_RED]]U\u017e nejsi v\u016fdce party.
+Party.Owner.Player=[[GREEN]]Nyn\u00ed jsi v\u016fdce party.
+Party.Password.Incorrect=[[RED]]Heslo k part\u011b je \u0161patn\u011b!
 Party.Password.Set=[[GREEN]]Heslo do party nastaveno na {0}
 Party.Player.Invalid=[[RED]]Tohle neni platny hrac.
 Party.NotOnline=[[DARK_RED]]{0} nen\u00ed online!
@@ -373,6 +393,7 @@ Commands.XPGain.Repair=Opravovani
 Commands.XPGain.Swords=Zabijenim monster.
 Commands.XPGain.Taming=Ochoceni zvirat nebo boj s vlky
 Commands.XPGain.Unarmed=Zabijenim monster.
+Commands.XPGain.Woodcutting=K\u00e1cen\u00ed strom\u016f
 Commands.XPGain=[[DARK_GRAY]]Zisk dovednosti: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Tvuj XP bar byl uzamcen na {0}!
 Commands.xplock.unlocked=[[GOLD]]Tvuj XP bar je nyni [[GREEN]]ODEMCEN[[GOLD]]!
@@ -392,6 +413,8 @@ Guides.Available=[[DARK_AQUA]]N\u00e1vod k {0} - napi\u0161te /{1} ? [page]
 Guides.Excavation=[[DARK_AQUA]]O kopani:\n[[YELLOW]]Kopani je cinnost vykonavana nicenim bloku hliny lopatou a nachazenim pokladu.\n[[YELLOW]]Nicenim bloku lopatou ziskavate sanci, ze naleznete poklady.\n[[YELLOW]]Cim dele tuhle cinnost provozujete, tim vic zvysujete svou sanci k naleznuti.\n[[DARK_AQUA]]Zisk dovednosti:\n[[YELLOW]]Pro zisk dovednosti v kopani musite nicit hlinene bloky lopatou.\n[[YELLOW]]Pro naleznuti pokladu muzou byt niceni jen nektere bloky.\n[[DARK_AQUA]]Seznam bloku se sanci pro nalezeni pokladu:\n[[YELLOW]]Trava, Hlina, Pisek, Jil, Sterk, Podhubi, Zvetrany pisek\n[[DARK_AQUA]]Jak pouzivat Giga Drill Breaker:\n[[YELLOW]]S lopatou v ruce a klikem pravym tlacidlem aktivujete svuj nastroj.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
 Guides.Mining=[[DARK_AQUA]]O Miningu:\n[[YELLOW]]Mining spo\u010d\u00edv\u00e1 v t\u011b\u017een\u00ed kamenu a rud. Poskytuje bonusy\n[[YELLOW]]v po\u010dtu materi\u00e1lu, kter\u00fd vyt\u011b\u017e\u00edte.\n\n[[DARK_AQUA]]Z\u00edskan\u00ed XP:\n[[YELLOW]]Aby jste dostali XP, mus\u00edte m\u00edt v ruce krump\u00e1\u010d.\n[[YELLOW]]XP v\u00e1m d\u00e1vaj\u00ed jenom jist\u00e9 bloky.\n\n[[DARK_AQUA]]Kompatibiln\u00ed materi\u00e1ly:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, a Netherrack.\n\n\n[[DARK_AQUA]]Jak pou\u017e\u00edt Super Breaker:\n[[YELLOW]]Dr\u017ete v ruce krump\u00e1\u010d a stisknete prav\u00e9 tla\u010ditko na my\u0161i.\n[[YELLOW]]Vr\u00e1mci \u010dty\u0159 sekund m\u00fa\u017eete buchnout do bloku, kter\u00fd je naps\u00e1n\n[[YELLOW]]v kompatibiln\u00edch materi\u00e1lech, kter\u00e9 aktivujou\n[[YELLOW]]Super Breaker.\n\n[[DARK_AQUA]]Co je to Super Breaker?\n[[YELLOW]]Super Breaker je schopnost, kter\u00e1 trv\u00e1 podle toho,\n[[YELLOW]]jak\u00fd m\u00e1te skill. Ztrojn\u00e1sobuje va\u0161i \u0161anci na z\u00edskan\u00ed extra v\u011bc\u00ed\n[[YELLOW]]a t\u011b\u017e\u00edte bloky na jednu r\u00e1nu.\n\n[[DARK_AQUA]]Jak pou\u017e\u00edt Blast Mining:\n[[YELLOW]]Kdy\u017e m\u00e1te v ruce odpalova\u010d, kter\u00fdm je flint and steel ve vychoz\u00edm nastaven\u00ed,\n[[YELLOW]]klikn\u011bte prav\u00fdm tla\u010ditkem na my\u0161i na TNT, a to zp\u016fsob\u00ed,\n[[YELLOW]]\u017ee hned bouchne.\n\n[[DARK_AQUA]]Jak funguje Blast Mining?\n[[YELLOW]]Blast Mining je schopnost, kter\u00e1 trv\u00e1 podle toho, jak\u00fd m\u00e1te\n[[YELLOW]]skill. D\u00e1va bonusy kdy\u017e t\u011b\u017e\u00edte pou\u017eit\u00edm TNT a umo\u017e\u0148uje v\u00e1m\n[[YELLOW]]d\u00e1lkov\u011b odp\u00e1lit TNT. Blast mining m\u00e1 3 \u010d\u00e1sti.\n[[YELLOW]]Prvn\u00ed \u010d\u00e1st je Bigger Bombs, kter\u00e1 zv\u011bt\u0161uje oblast v\u00fdbuchu.\n[[YELLOW]]Druh\u00e1 \u010d\u00e1st je Demolitions Expert, kter\u00e1 zvy\u0161uje po\u0161kozen\u00ed\n[[YELLOW]]v\u00fdbuchem TNT. T\u0159et\u00ed \u010d\u00e1st prost\u011b zvy\u0161uje mno\u017estvi rud, kter\u00e9\n[[YELLOW]]z\u00edsk\u00e1te z TNT a zni\u017euje su\u0165,\n[[YELLOW]]kter\u00e1 padne.
 Guides.Page.Invalid=Nespr\u00e1vn\u00e9 \u010d\u00edslo str\u00e1nky!
+Guides.Page.OutOfRange=Tato str\u00e1nka neexistuje, je tu pouze {0} str\u00e1nek.
+Guides.Repair=[[DARK_AQUA]]Opravov\u00e1n\u00ed:\n[[YELLOW]]Oprava umo\u017e\u0148uje pou\u017e\u00edvat \u017eelezn\u00fd blok k oprav\u011b brn\u011bn\u00ed a\n[[YELLOW]]n\u00e1stroje, nebo zlat\u00fd blok, aby zachr\u00e1nil zbroj a n\u00e1stroje.\n\n[[DARK_AQUA]]XP ZISK:\n[[YELLOW]]Pro opravu n\u00e1stroj\u016f nebo brn\u011bn\u00ed se pou\u017e\u00edv\u00e1 mcMMO kovadlina.Je to\n[[YELLOW]]\u017eelezn\u00fd blok ve v\u00fdchoz\u00edm nastaven\u00ed a nem\u011bl by b\u00fdt zam\u011b\u0148ov\u00e1n s\n[[YELLOW]]the Vanilla Minecraft Anvil.\n[[DARK_AQUA]]Jak si m\u00e1m n\u011bco opravit?\n[[YELLOW]]Polo\u017e te mcMMO kovadlinu a prav\u00edm kliknut\u00edm na opravu polo\u017eky \n[[YELLOW]]kter\u00fd pr\u00e1v\u011b dr\u017e\u00ed\u0161.Spot\u0159ebuje to 1 polo\u017eku na ka\u017ed\u00e9 pou\u017eit\u00ed.\n\n[[DARK_AQUA]]Jak opravit Mastery v\u011bci?\n[[YELLOW]]Repair Mastery increases the repair amount. The extra amount\n[[YELLOW]]repaired is influenced by your Repair skill level.\n\n[[DARK_AQUA]]Jak funguje super opravov\u00e1n\u00ed?\n[[YELLOW]]Super Repair je pasivn\u00ed schopnost.P\u0159i oprav\u00e1ch polo\u017eky,\n[[YELLOW]] ud\u011bl\u00ed hr\u00e1\u010d\u016fm \u0161anci opravit polo\u017eku s\n[[YELLOW]]s dvojitou \u00fa\u010dinost\u00ed.\n\n\n\n\n[[DARK_AQUA]]Jak Arcane Forging funguje?\n[[YELLOW]]Tato pasivn\u00ed schopnost umo\u017e\u0148uje k oprav\u011b polo\u017eky s ur\u010ditou\n[[YELLOW]]\u0161ance na zachov\u00e1n\u00ed jejich kouzla. Tyto enchanty mohou b\u00fdt\n[[YELLOW]]zachov\u00e1ny, nebo sn\u00ed\u017eeny na ni\u017e\u0161\u00ed \u00farove\u0148,\n[[YELLOW]]nebo \u00fapln\u011b ztraceny.\n\n\n\n[[DARK_AQUA]]Jak funguje Salvage?\n[[YELLOW]]Polo\u017ete mcMMO kovadlinu a klikn\u011bte prav\u00fdm tla\u010d\u00edtkem my\u0161i na z\u00e1chranu\n[[YELLOW]]itemu kter\u00fd pr\u00e1v\u011b dr\u017e\u00ed\u0161.\n[[YELLOW]]This will break the item apart en give back the used ingots.\n[[YELLOW]]Pozn\u00e1mka:Je mo\u017en\u00e9 zachr\u00e1nit pouze pln\u011b opraven\u00e9 n\u00e1stroje nebo brn\u011bn\u00ed.
 Inspect.Offline=[[RED]]Nem\u00e1\u0161 pr\u00e1va kontrolovat hr\u00e1\u010de co nejsou online!
 Inspect.OfflineStats=mcMMO Statistiky pro offline hrace [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Statistiky pro [[YELLOW]]{0}
@@ -414,8 +437,10 @@ Perks.lucky.name=\u0160test\u00ed
 Perks.cooldowns.name=Rychle zotaveni
 Perks.activationtime.name=Vytrvalost
 Perks.activationtime.desc=Prodlu\u017euje pou\u017eit\u00ed schopnosti na {0} sekund.
+Hardcore.Player.Loss=[GOLD]][mcMMO] [[DARK_RED]]Ztratil jsi [[BLUE]]{0}[[DARK_RED]] za smrt.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Z\u00edskal jsi [[BLUE]]{0}[[DARK_AQUA]] level\u016f od [[YELLOW]]{1}.
 Spout.Donate=[[YELLOW]][mcMMO] P\u0159isp\u011bjte!
+Spout.Menu.ExitButton=V\u00fdchod
 Spout.Menu.HudButton.1=Typ HUD: {0}
 Spout.Menu.HudButton.2=Zm\u011b\u0148te si styl HUD!
 MOTD.Version=[[GOLD]][mcMMO] - verze [[DARK_AQUA]]{0}
