--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -1,10 +1,36 @@
+Acrobatics.Combat.Proc=[[GREEN]]**Esquivou**
+Acrobatics.Effect.0=Rolar
+Acrobatics.Effect.4=Esquivou
+Acrobatics.Roll.Text=**Rolou**
 Acrobatics.SkillName=ACROBACIA
-Fishing.ItemFound=[[GRAY]]Treasure found!
+Acrobatics.Skillup=[[AMARELO]]Habilidade Acrobacia aumentada em {0}. Total ({1})
+Archery.Listener=Arqueiro
+Archery.SkillName=ARQUEIRO
+Archery.Skillup=[[AMARELO]]Habilidade Arqueiro aumentada em {0}. Total ({1})
+Axes.Ability.Bonus.0=Machado
+Axes.SkillName=Machado
+Excavation.Effect.3=Habilidade de cavar tesouros
+Excavation.SkillName=Escava\u00e7\u00e3o
+Fishing.ItemFound=[[GRAY]]Tesouro encontrado!
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
+Fishing.SkillName=PESCARIA
+Herbalism.Listener=Herbalismo
+Herbalism.SkillName=HERBALISMO
 Mining.Ability.Ready=[[VERDE]]**VOC\u00ca PREPARA A SUA PICARETA**
-Mining.Skillup=[[AMARELO]]Capacidade de Minar aumentada em {0}. Total ({1})
+Mining.SkillName=MINERAR
+Mining.Skillup=[[YELLOW]]Habilidade Minerar aumentada em {0}. Total ({1})
+Mining.Blast.Boom=[[GRAY]]**BOOM**
+Repair.Skills.AdeptGold=[[DARK_RED]]Voc\u00ea n\u00e3o tem nivel suficiente pra reparar Ouro.
 Repair.Arcane.Fail=[[VERMELHO]]Poder misterioso saiu permanentemente do item.
-Swords.Combat.Bleeding.Stopped=[[CINZA]]O sangramento tem [[VERDE]]Parado[[CINZA]]!
+Swords.Combat.Bleeding.Stopped=[[GRAY]]O sangramento[[GREEN]]parou[[GRAY]]!
+Swords.Effect.0=Contra-ataque
+Swords.Effect.6=Sangrou
+Swords.SkillName=Espada
+Taming.Listener=Domar
+Taming.SkillName=DOMAR
+Unarmed.SkillName=DESARMAR
+Woodcutting.Listener=Lenhador
+Woodcutting.SkillName=Lenhador
 Ability.Generic.Template=[[VERMELHO]]{0}:[[AMARELO]]{1}
 Combat.ArrowDeflect=[[WHITE]]*DESVIOU A FLECHA*
 Combat.BeastLore=[[GREEN]]*CONHECIMENTO DE FERAS*
@@ -14,25 +40,31 @@ Combat.Gore=[[GREEN]]*MORDIDA*
 Combat.StruckByGore=[[RED]]*ATINGIDO POR MORDIDA*
 Combat.TargetDazed=Alvo foi [[DARK_RED]]Atordoado
 Combat.TouchedFuzzy=[[DARK_RED]]Visao turva. Sente Tonturas.
-Commands.DoesNotExist=[[RED]]Player does not exist in the database!
-Commands.NoConsole=This command does not support console usage.
+Commands.DoesNotExist=[[RED]]Player n\u00e3o existe na database!
+Commands.GodMode.Disabled=[[YELLOW]]mcMMO Modo God desabilitado
+Commands.NoConsole=Esse comando n\u00e3o suporta uso no console
+Commands.Party.Kick=[[RED]]Voc\u00ea foi kickado da party {0}!
+Commands.Stats.Self=SEUS STATS
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
-Party.Locked=[[RED]]Equipe est\u00e1 trancada, s\u00f3 o l\u00edder pode convidar.
+Party.Locked=[[RED]]Equipe est\u00e1 bloqueada, s\u00f3 o l\u00edder pode convidar.
 Party.NotInYourParty=[[DARK_RED]]{0} nao est\u00e1 na sua equipe
 Party.Password.Set=[[GREEN]]Senha da equipe: {0}
 Party.Unlocked=[[GRAY]]Equipe foi Destrancada
-Commands.XPGain.Mining=Minar Pedra & Min\u00e9rio
+Commands.XPGain.Acrobatics=CAINDO
+Commands.XPGain.Excavation=Cavando e achando tesouros
+Commands.XPGain.Mining=Minerar Pedra & Min\u00e9rio
+Commands.XPGain=[[DARK_GRAY]]XP ADQUIRIDO: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Sua barra de XP BAR est\u00e1 travada em {0}!
 Commands.xplock.unlocked=[[GOLD]]Sua barra de XP foi [[GREEN]]DESTRAVADA[[GOLD]]!
 Commands.xprate.over=[[RED]]Evento de XP Rate acabou!!
 XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 Guides.Axes=Guide coming soon...
-Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
+Guides.Excavation=[[DARK_AQUA]] Sobre escava\u00e7\u00e3o:.. \\ N [[YELLOW]] Escava\u00e7\u00e3o \u00e9 o ato de cavar terra para encontrar tesouros \\ n [[YELLOW]] Por escavando a terra que voc\u00ea vai encontrar tesouros \\ n [[YELLOW]] Quanto mais voc\u00ea fizer isso mais os tesouros que voc\u00ea pode encontrar \\ n \\ n [[DARK_AQUA]] gANHO XP:. \\ n [[YELLOW]] Para ganhar XP neste habilidade que voc\u00ea tem que cavar com uma p\u00e1 na m\u00e3o \\ n [[. YELLOW]] Apenas certos materiais pode ser desenterrado para tesouros e XP \\ n [[DARK_AQUA]] Materiais compat\u00edveis:. \\ n [[YELLOW]] grama, terra, areia, argila, cascalho, Mic\u00e9lio, Areia Alma \\ n \\ n [[DARK_AQUA]] Como usar Broca Giga Breaker: \\ n [[YELLOW]] com uma p\u00e1 na m\u00e3o direita clique para pronta sua ferramenta \\ n [[YELLOW]] uma vez neste estado tem cerca de 4 segundos para fazer \\. n [[YELLOW]] contato com materiais de escava\u00e7\u00e3o compat\u00edveis esta \\ n [[YELLOW]] ativar disjuntor Broca Giga. \\ n [[DARK_AQUA]] O que \u00e9 o Giga disjuntor broca? \\ n [[YELLOW]] Disjuntor Broca Giga \u00e9 uma habilidade com um cooldown \\ n [[YELLOW]] ligada \u00e0 habilidade de escava\u00e7\u00e3o. Triplica sua chance \\ n [[YELLOW]] de encontrar tesouros e permite quebra instant\u00e2nea \\ n [[YELLOW]] em materiais de escava\u00e7\u00e3o. \\ N \\ n [[DARK_AQUA]] Como Treasure Hunter trabalho? \\ N [[] YELLOW ] Cada tesouro poss\u00edvel para escava\u00e7\u00e3o tem a sua pr\u00f3pria \\ n [[YELLOW]] exig\u00eancia de n\u00edvel de habilidade para a sua queda, como resultado, \u00e9 \\ n [[YELLOW]] dif\u00edcil dizer o quanto ele est\u00e1 ajudando voc\u00ea. \\ n [[YELLOW ]] Basta ter em mente que a habilidade maior escava\u00e7\u00e3o sua \\ n [[YELLOW]] \u00e9, os mais tesouros que podem ser encontrados. \\ n [[YELLOW]] E tamb\u00e9m ter em mente que cada tipo de escava\u00e7\u00e3o \\ n [[YELLOW]] material compat\u00edvel tem sua pr\u00f3pria lista \u00fanica de tesouros. \\ n [[YELLOW]] em outras palavras, voc\u00ea vai encontrar tesouros diferentes na sujeira \\ n [[YELLOW]] do que voc\u00ea em cascalho. \\ n [[DARK_AQUA]] notas sobre a escava\u00e7\u00e3o: \\ n [[YELLOW]] gotas de escava\u00e7\u00e3o s\u00e3o completamente customizeable \\ n [[YELLOW]] Ent\u00e3o, os resultados variam de servidor para servidor.\n
 Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining stone and ores. It provides bonuses\n[[YELLOW]]to the amount of materials dropped while mining.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you must mine with a pickaxe in hand.\n[[YELLOW]]Only certain blocks award XP.\n\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, and Netherrack.\n\n[[DARK_AQUA]]How to use Super Breaker:\n[[YELLOW]]With a pickaxe in your hand, right click to ready your tool.\n[[YELLOW]]Once in this state, you have about 4 seconds to make contact\n[[YELLOW]]with Mining compatible materials, which will activate Super\n[[YELLOW]]Breaker.\n\n[[DARK_AQUA]]What is Super Breaker?\n[[YELLOW]]Super Breaker is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It triples your chance of extra items dropping and\n[[YELLOW]]enables instant break on Mining materials.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]How does Blast Mining work?\n[[YELLOW]]Blast Mining is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It gives bonuses when mining with TNT and allows you\n[[YELLOW]]to remote detonate TNT. There are three parts to Blast Mining.\n[[YELLOW]]The first part is Bigger Bombs, which increases blast radius.\n[[YELLOW]]The second is Demolitions Expert, which decreases damage\n[[YELLOW]]from TNT explosions. The third part simply increases the\n[[YELLOW]]amount of ores dropped from TNT and decreases the\n[[YELLOW]]debris dropped.
-Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
+Inspect.OfflineStats=mcMMO Statsde player offline[[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
 Skills.Disarmed=[[DARK_RED]]Voc\u00ea foi Desarmado!
 Skills.NeedMore=[[DARK_RED]]Voc\u00ea precisa de mais
 Skills.TooTired=[[RED]]Voc\u00ea est\u00e1 cansado pra usar essa habilidade.
-Stats.Header.Combat=[[DOURADO]]-=HABILIDADES DE COMBATE=-
+Stats.Header.Combat=[[GOLD]]-=SKILLS DE COMBATE=-
