--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 1.4.05-dev
  = Fixed Chimera Wing spamming console if Metrics was disabled
  = Fixed Chimera Wing displaying warmup message if warmup was set to 0
  = Fixed party & admin chat errors when not aysnc
+ ! Updated localization files
 
 Version 1.4.04
  + Added functions to ExperienceAPI for use with offline players
