--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,7 @@ Key:
   ! Change
   - Removal
 
-Version 1.4.05-dev
+Version 1.4.05
  + Added option to allow refreshing of chunks after block-breaking abilities. (Disabled by default)
  + Added fireworks effects when a player levels-up, for every 100 levels (configurable)
  = Fixed bug where /addxp was setting instead of adding experience
