--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,8 @@ Key:
   - Removal
   
 Version 1.4.06-dev
+ + Added new permission node for /ptp; mcmmo.commands.ptp.send (enabled by default)
+ = Fixed displaying partial names when trying to use /ptp
  ! Changed Chimaera Wing's recipe result to use the ingredient Material
 
 Version 1.4.05
