--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.4.06-dev
  + Added new API method to McMMOPlayerLevelUpEvent to set levels gained
  + Added new permission node for /ptp; mcmmo.commands.ptp.send (enabled by default)
  = Fixed displaying partial names when trying to use /ptp
+ = Fixed wolves from Call of the Wild only having 8 health
  ! Changed Chimaera Wing's recipe result to use the ingredient Material
 
 Version 1.4.05
