--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ Version 1.4.06-dev
  = Fixed bug where /party chat was not working
  ! Changed Chimaera Wing's recipe result to use the ingredient Material
  ! Players will no longer pickup items to their hotbar while using Unarmed
+ ! ExperienceAPI methods will now throw InvalidSkillException if the skill name passed in is invalid.
 
 Version 1.4.05
  + Added option to allow refreshing of chunks after block-breaking abilities. (Disabled by default)
