--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ Version 1.4.06-dev
  = Fixed wolves from Call of the Wild only having 8 health
  = Fixed bug where /party chat was not working
  = Fixed bug where experience commands were adding levels to all skills when they shouldn't
+ = Fixed mcmmo.commands.ptp.send not being set by default
  ! Changed Chimaera Wing's recipe result to use the ingredient Material
  ! Players will no longer pickup items to their hotbar while using Unarmed
  ! ExperienceAPI methods will now throw InvalidSkillException if the skill name passed in is invalid.
